...
                    languageProvider.getText(
                        'भाषा सेटिङ्स', 'Language Settings'),
                    style: Theme.of(context).textTheme.titleLarge,
                  ),
                ),
                RadioListTile<String>(
                  title: const Text('नेपाली'),
                  value: 'ne',
                  groupValue: languageProvider.currentLanguage,
                  onChanged: (String? value) {
                    if (value != null) {
                      languageProvider.setLanguage(value);
                    }
                  },
                ),
                RadioListTile<String>(
                  title: const Text('English'),
                  value: 'en',
                  groupValue: languageProvider.currentLanguage,
                  onChanged: (String? value) {
                    if (value != null) {
                      languageProvider.setLanguage(value);
                    }
...
